# vigil

./: .gitignore  Cargo.toml  LICENSE  README.md
.context/plans/: multi-package-manager.md
.github/workflows/: release.yml
crates/vigil-cli/: Cargo.toml
crates/vigil-cli/src/: audit_log.rs  main.rs  output.rs
crates/vigil-cli/src/commands/: audit.rs  import.rs  init.rs  install.rs  mod.rs  remove.rs  trust.rs  update.rs  verify.rs
crates/vigil-core/: Cargo.toml
crates/vigil-core/src/: bun.rs  config.rs  error.rs  hash.rs  lib.rs  lockfile.rs  npm.rs  overrides.rs  package_json.rs  resolver.rs  runner.rs  semver_resolve.rs  types.rs
crates/vigil-core/src/policy/: age_gate.rs  mod.rs  postinstall.rs  velocity.rs
crates/vigil-core/src/registry/: client.rs  error.rs  mod.rs  types.rs
crates/vigil-registry/: Cargo.toml
crates/vigil-registry/examples/: fetch.rs
crates/vigil-registry/src/: client.rs  error.rs  fixture_tests.rs  lib.rs  mock.rs  semver_resolve.rs  types.rs
crates/vigil-scan/: Cargo.toml
crates/vigil-scan/src/: lib.rs
tests/fixtures/: debug.json  esbuild.json  follow-redirects.json  has-flag.json  ms.json
