[package]
name = "vigil-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "vigil"
path = "src/main.rs"

[dependencies]
vigil-core = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
miette = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
