[package]
name = "vigil-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "vigil"
path = "src/main.rs"

[dependencies]
vigil-core = { workspace = true }
vigil-registry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
miette = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
whoami = { workspace = true }
owo-colors = { workspace = true }
fd-lock = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = "3"
