[package]
name = "vigil-registry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
vigil-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
